# axum-server

./: .gitignore  Cargo.toml  Dockerfile  config.json
src/: error.rs  main.rs  model.rs
src/web/: routes_login.rs  routes_tickets.rs
tests/: quick_dev.rs
