[package]
name = "axum-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = "0.6.20"
httpc-test = "0.1.5"
serde = "1.0.183"
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.3", features = ["fs"] }
